@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.63 2002/10/02 01:21:01 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.64 2002/10/03 03:36:02 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1639,3 +1639,8 @@ games/rogue/rogue.h				1.13
   Use correctly bounded strings when reloading a saved game.  In particular,
   do not let the save game file "string length" exceed the amount of space
   supplied.  As noted by <stanojr@iserver.sk> on bugtraq.  Fixes SA#2002-021.
+
+gnu/dist/sendmail/smrsh/smrsh.c			1.9
+
+  Plug smrsh vulnerability, as presented in
+  http://www.sendmail.org/smrsh.adv.txt.  Fixes SA#2002-023.
